# components/ambient-api-server/pkg/api/openapi/model_gateway_route.go
@@ -1,0 +1,126 @@
+/*
+Ambient API Server
+
+Ambient API Server
+
+API version: 1.0.0
+Contact: ambient-code@redhat.com
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the GatewayRoute type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GatewayRoute{}
+
+// GatewayRoute Route configuration for external gateway exposure on OpenShift
+type GatewayRoute struct {
+	// Hostname for the OpenShift Route. If empty, OpenShift assigns a hostname based on the cluster's default routing suffix.
+	Host *string `json:"host,omitempty"`
+}
+
+// NewGatewayRoute instantiates a new GatewayRoute object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGatewayRoute() *GatewayRoute {
+	this := GatewayRoute{}
+	return &this
+}
+
+// NewGatewayRouteWithDefaults instantiates a new GatewayRoute object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGatewayRouteWithDefaults() *GatewayRoute {
+	this := GatewayRoute{}
+	return &this
+}
+
+// GetHost returns the Host field value if set, zero value otherwise.
+func (o *GatewayRoute) GetHost() string {
+	if o == nil || IsNil(o.Host) {
+		var ret string
+		return ret
+	}
+	return *o.Host
+}
+
+// GetHostOk returns a tuple with the Host field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GatewayRoute) GetHostOk() (*string, bool) {
+	if o == nil || IsNil(o.Host) {
+		return nil, false
+	}
+	return o.Host, true
+}
+
+// HasHost returns a boolean if a field has been set.
+func (o *GatewayRoute) HasHost() bool {
+	if o != nil && !IsNil(o.Host) {
+		return true
+	}
+
+	return false
+}
+
+// SetHost gets a reference to the given string and assigns it to the Host field.
+func (o *GatewayRoute) SetHost(v string) {
+	o.Host = &v
+}
+
+func (o GatewayRoute) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GatewayRoute) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Host) {
+		toSerialize["host"] = o.Host
+	}
+	return toSerialize, nil
+}
+
+type NullableGatewayRoute struct {
+	value *GatewayRoute
+	isSet bool
+}
+
+func (v NullableGatewayRoute) Get() *GatewayRoute {
+	return v.value
+}
+
+func (v *NullableGatewayRoute) Set(val *GatewayRoute) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGatewayRoute) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGatewayRoute) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGatewayRoute(val *GatewayRoute) *NullableGatewayRoute {
+	return &NullableGatewayRoute{value: val, isSet: true}
+}
+
+func (v NullableGatewayRoute) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGatewayRoute) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
