# components/ambient-api-server/plugins/gateways/model.go
@@ -15,6 +15,8 @@ type Gateway struct {
 	Labels         *string `json:"labels"            gorm:"type:jsonb"`
 	Annotations    *string `json:"annotations"       gorm:"type:jsonb"`
 	Oidc           *string `json:"oidc"              gorm:"type:jsonb"`
+	Route          *string `json:"route"             gorm:"type:jsonb"`
+	RouteAddress   *string `json:"route_address"`
 	ClusterId      *string `json:"cluster_id"        gorm:"index"`
 }
 
