# components/ambient-sdk/go-sdk/types/gateway_route.go
@@ -1,0 +1,5 @@
+package types
+
+type GatewayRoute struct {
+	Host string `json:"host,omitempty"`
+}
